# camstudio

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .hgignore  About.psd  AnnotationEffectsOptions.h  AudioFormat.cpp  AudioFormat.h  AudioSpeakers.cpp  AudioSpeakers.h  AutopanSpeed.h  Bugs.txt  CBitmapEx.cpp  CBitmapEx.h  CMakeLists.txt  CamStudio.sln  CamStudioCommandLineInfo.cpp  CamStudio_2.7_Release.docx  CursorOptionsDlg.cpp  CursorOptionsDlg.h  EditTransparency.cpp  EffectsOptions.cpp  FixedRegion.cpp  FolderDialog.cpp  FrameGrabber.cpp  HotKey.h  Keyshortcuts.cpp  LayoutList.cpp  LayoutList.h  License.txt  Logo.psd  MainFrm.cpp  MainFrm.h  NewShape.cpp  PresetTime.cpp  Profile.h  README.md  ReadMe.txt  Readme_drop26_branch.txt  (+40 more)
CamAudio/: CMakeLists.txt  fisterlib.vcxproj.filters
CamAudio/include/CamAudio/: buffer.h  sound_file.h  sound_in.h  sound_out.h
CamAudio/src/: buffer.cpp  sound_base.cpp  sound_file.cpp  sound_in.cpp  sound_out.cpp  stdafx.h
CamCapture/: CMakeLists.txt
CamCapture/include/CamCapture/: cam_annotarion.h  cam_capture.h  cam_color.h  cam_draw_data.h  cam_gdiplus.h  cam_gdiplus_fwd.h  cam_mouse_button.h  cam_point.h  cam_rect.h  cam_size.h  cam_stop_watch.h  (+1 more)
CamCapture/src/: cam_capture.cpp  cam_virtual_screen_info.cpp
CamCapture/tests/: CMakeLists.txt
CamCodec/: CMakeLists.txt  camcodec-win7-64bit.inf  camcodec.cpp  camcodec.def  camcodec.h  camcodec.rc  camcodec.vcxproj  drvproc.cpp
CamEncoder/: CMakeLists.txt
CamEncoder/benchmark/: CMakeLists.txt
CamEncoder/src/: av_audio.cpp  av_dict.cpp  av_error.cpp  av_log.h  av_muxer.cpp  av_video.cpp  av_writer.cpp  avi_writer.cpp  video_writer.cpp
CamEncoder/tests/: CMakeLists.txt
CamHook/: CMakeLists.txt  CamHook.cpp  CamHook.rc  CamHook.vcxproj  ClickQueue.cpp  resource.h  stdafx.h
CamHook/src/: cam_hook.cpp
CamLib/: CBitmapEx.cpp  CBitmapEx.h  CMakeLists.txt  CStudioLib.h  CStudiolib.cpp  CamColor.h  CamError.cpp  CamError.h  CamFile.cpp  CamFile.h  CamImage.cpp  CamImage.h  CamLib.vcxproj  CamLib.vcxproj.filters  CamRect.cpp  CamRect.h  CamSys.cpp  CamSys.h  CamWindow.cpp  CamWindow.h  Picture.cpp  Picture.h  TrayIcon.cpp  TrayIcon.h  stdafx.h  targetver.h
CamLib/Debug/: BuildLog.htm
CamLib/Release/: BuildLog.htm
CamLib/src/: CBitmapEx.cpp  CStudiolib.cpp  CamError.cpp  CamFile.cpp  CamImage.cpp  CamRect.cpp  CamSys.cpp  Picture.cpp  TrayIcon.cpp  stdafx.h
CamLib/tests/: CMakeLists.txt
CamStudioPlayer/: CMakeLists.txt  Player.vcproj  Player.vcxproj  player.cpp  player.h  player.mak  player.rc  resource.h
CamStudioPlayerPlus/: AUDIO.H  AudioFormat.cpp  AudioFormat.h  CMakeLists.txt  MULDIV32.H  MainFrm.cpp  MainFrm.h  SlideToolBar.cpp  SlideToolBar.h  audio.cpp  audio.h  playerplus.h  playplus.clw  playplus.cpp  playplus.h  playplus.rc  playplus.vcproj  playplus.vcxproj  playplus.vcxproj.filters  playplusDoc.h  playplusView.cpp  playplusView.h  targetver.h
CamStudioPlayerPlus/res/: playplus.rc2
CamStudioRecorder/: AVI.cpp  AVI.h  AVICompressorFilter.cpp  AVICompressorFilter.h  AboutDlg.cpp  AboutDlg.h  AudioFormat.cpp  AudioFormat.h  AudioFormatDlg.cpp  AudioFormatDlg.h  AudioMixer.cpp  AudioMixer.h  AudioSpeakers.cpp  AudioSpeakersDlg.cpp  AudioSpeakersDlg.h  AudioVolume.h  AutoSearchDialog.h  AutoSearchDlg.cpp  AutopanSpeed.cpp  AutopanSpeedDlg.cpp  AutopanSpeedDlg.h  AviWriter.cpp  AviWriter.h  BasicMessage.cpp  BasicMessage.h  BasicMessageDlg.cpp  BasicMessageDlg.h  CMakeLists.txt  CamCursor.cpp  CamCursor.h  CamStudioCommandLineInfo.cpp  CamStudioCommandLineInfo.h  CursorOptionsDlg.cpp  CursorOptionsDlg.h  EditImage.cpp  EditImageDlg.cpp  EditTransparency.cpp  EditTransparencyDlg.cpp  EditTransparencyDlg.h  FixedRegion.cpp  (+124 more)
CamStudioRecorder/Localization/: Localization.cpp
CamStudioRecorder/addons/: AnnotationEffectsOptions.cpp  AnnotationEffectsOptions.h  AnnotationEffectsOptionsDlg.cpp  AnnotationEffectsOptionsDlg.h  Camstudio4XNote.h  EffectsOptions.h  EffectsOptions2.cpp  EffectsOptions2.h  EffectsOptions2Dlg.cpp  EffectsOptions2Dlg.h  EffectsOptionsDlg.cpp  EffectsOptionsDlg.h  ImageAttributes.h  TextAttributes.h  XnoteStopwatchFormat.cpp  XnoteStopwatchFormat.h
CamStudioRecorder/codec/: avi_writer.cpp  avi_writer.h  video_writer.cpp  video_writer.h
CamStudioRecorder/output/: CamStudio.nsi  help.chm
CamStudioRecorder/res/: Recorder.rc2
CamStudioRecorder/settings/: application_settings.h  settings_enum_type.h  shortcut_settings.h  video_settings.h
CamStudioRecorder/ui/: listbox_base_ui.cpp  listbox_base_ui.h  listbox_grid_ui.cpp  listbox_grid_ui.h
CamStudioRecorder/utility/: filesystem.cpp  filesystem.h  make_array.h  rect_util.h  string_convert.cpp  string_convert.h  window_util.cpp  window_util.h
CamStudioRecorder/vfw/: ACM.cpp  ACM.h  VCM.cpp  VCM.h
dep/: CMakeLists.txt
dep/CxImage/: CMakeLists.txt  CxImgLib.sln
dep/cmake/: CopyToTargetConfigPath.cmake  CreateInnoSetup.cmake  FindFFMPEG.cmake  FindInnoSetup.cmake  MyBuildinfo.cmake  buildinfo.h.in
dep/localization/: CMakeLists.txt  Localization.cpp
dep/minilzo/: CMakeLists.txt  minilzo.vcxproj  minilzo.vcxproj.filters
dep/mouse_simulation/: CMakeLists.txt
src/StudioRecorder/: AboutDlg.cpp  AboutDlg.h  AutopanSpeedDlg.cpp  AutopanSpeedDlg.h  BasicMessageDlg.h  CMakeLists.txt  FixedRegionDlg.cpp  FixedRegionDlg.h  MainFrm.cpp  MainFrm.h  Recorder.cpp  Recorder.rc  RecorderDoc.cpp  RecorderView.cpp  RecorderView.h  TrayIcon.cpp  TrayIcon.h  application_settings_ui.cpp  application_settings_ui.h  background_capture_source.cpp  background_capture_source.h  capture_thread.cpp  capture_thread.h  cursor_settings_preview.cpp  cursor_settings_preview.h  cursor_settings_ui.cpp  cursor_settings_ui.h  fmt_helper.h  gdi_plus_initializer.cpp  gdi_plus_initializer.h  mouse_capture_ui.cpp  mouse_capture_ui.h  resource.h  settings_model.cpp  settings_model.h  settings_table.h  shortcut_controller.cpp  shortcut_controller.h  shortcut_settings_ui.cpp  shortcut_settings_ui.h  (+10 more)
src/screen_capture/: CMakeLists.txt
src/screen_capture_desktop_duplication/: CMakeLists.txt  main.cpp
(+2616 files in other folders)
